--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,39 @@
-<p>login-page works!</p>
+
+<form
+  autocomplete="off"
+  [formGroup]="myForm"
+  (ngSubmit)="onLogin()"
+  >
+  <div class="flex flex-column">
+
+    <span class="text-lg mb-4">Login</span>
+      <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input
+          type="email"
+          matInput placeholder="Correo"
+          formControlName="email">
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Contraseña</mat-label>
+        <input
+          type="password"
+          matInput
+          placeholder="Contraseña"
+          formControlName="password">
+      </mat-form-field>
+
+      <button mat-button mat-flat-button color="primary" (click)="onLogin()"
+        [disabled]="myForm.invalid">
+        <mat-icon>save</mat-icon>
+        Ingresar
+      </button>
+
+
+      <div class="flex justify-content-end mt-5">
+        <a routerLink="/auth/new-account">¿No tienes cuenta?</a>
+      </div>
+
+    </div>
+</form>
