--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -1,1 +1,57 @@
-<p>register-page works!</p>
+<form
+  autocomplete="off"
+  [formGroup]="formRegister"
+  (ngSubmit)="onRegister()"
+  >
+  <div class="flex flex-column">
+
+    <span class="text-lg mb-4">Registro de usuario</span>
+
+    <mat-form-field>
+      <mat-label>Usuario</mat-label>
+      <input type="text"
+             matInput placeholder="Usuario"
+             formControlName="user">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Nombre completo</mat-label>
+      <input type="text"
+             matInput placeholder="Nombre y apellidos del usuario"
+             formControlName="fullName">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Correo</mat-label>
+      <input type="email"
+             matInput placeholder="Correo"
+             formControlName="email">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Edad</mat-label>
+      <input type="number"
+             matInput placeholder="Edad"
+             formControlName="age">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Contraseña</mat-label>
+      <input type="password"
+             matInput placeholder="Contraseña"
+             formControlName="password">
+    </mat-form-field>
+
+    <button mat-button mat-flat-button color="primary"
+      [disabled]="formRegister.invalid">
+      <mat-icon>save</mat-icon>
+      Crear cuenta
+    </button>
+
+
+    <div class="flex justify-content-end mt-5">
+      <a routerLink="/auth/login">¿Ya tienes cuenta?</a>
+    </div>
+
+  </div>
+</form>
