list post and interceptor

--- a/src/app/posts/pages/list-page/list-page.component.html
+++ b/src/app/posts/pages/list-page/list-page.component.html
@@ -1,1 +1,8 @@
-<p>list-page works!</p>
+<h1>Publicaciones: {{apiResp?.total}}</h1>
+<mat-divider></mat-divider>
+<div class="grid bm-8 pt-2">
+  <div *ngFor="let post of apiResp?.posts"
+    class="col-12 sm:col-4 md:col-3 xl:col-2">
+    <post-card [post]="post"></post-card>
+  </div>
+</div>
