views error list create post

--- a/src/app/posts/components/card/card.component.html
+++ b/src/app/posts/components/card/card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<mat-card class="card">
   <mat-card-header>
     <mat-card-title>{{post.title}}</mat-card-title>
     <mat-card-subtitle>{{post.userId.user}}</mat-card-subtitle>
@@ -9,6 +9,6 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+    <button mat-button>EDITAR</button>
   </mat-card-actions>
 </mat-card>
