--- a/src/app/shared/pages/error404-page/error404-page.component.html
+++ b/src/app/shared/pages/error404-page/error404-page.component.html
@@ -1,1 +1,7 @@
-<p>error404-page works!</p>
+<section class="main">
+  <div class="container-404">
+    <div class="error-image"></div>
+    <h1 class="tittle">Error 404 - Página no encontrada</h1>
+    <p class="no-found">Lo sentimos, la página que estás buscando no existe.</p>
+  </div>
+</section>
