update user, post and delete

--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -35,17 +35,21 @@
              formControlName="age">
     </mat-form-field>
 
-    <mat-form-field>
+    <mat-form-field *ngIf="!edit">
       <mat-label>Contraseña</mat-label>
       <input type="password"
              matInput placeholder="Contraseña"
              formControlName="password">
     </mat-form-field>
 
-    <button mat-button mat-flat-button color="primary"
+    <button mat-button mat-flat-button color="primary" *ngIf="!edit"
       [disabled]="formRegister.invalid">
       <mat-icon>save</mat-icon>
       Crear cuenta
+    </button>
+    <button mat-button mat-flat-button color="primary" *ngIf="edit">
+      <mat-icon>save</mat-icon>
+      Actualizar Usuario
     </button>
 
 
