--- a/src/app/posts/components/card/card.component.html
+++ b/src/app/posts/components/card/card.component.html
@@ -6,9 +6,18 @@
   <mat-card-content>
     <p>{{post.content}}</p>
     <p>Likes: {{post.likes}}</p>
+    <p>Publicacion: {{post.createdAt | date}}</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>EDITAR</button>
+    <button mat-button mat-raised [routerLink]="['/posts/edit', post._id ]"
+      [disabled]="edit">
+      <mat-icon>edit</mat-icon>
+      Editar
+    </button>
+    <span class="spacer"></span>
+    <button mat-button mat-raised color="warn" (click)="deletePost()"
+    [disabled]="edit">
+      <mat-icon>delete</mat-icon>
+    </button>
   </mat-card-actions>
 </mat-card>
