--- a/src/app/posts/pages/layout-page/layout-page.component.html
+++ b/src/app/posts/pages/layout-page/layout-page.component.html
@@ -7,42 +7,33 @@
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-
     </mat-toolbar>
 
     <mat-nav-list>
-      <mat-list-item
-        *ngFor="let item of sidebarItems"
-        [routerLink]="item.url"
-        (click)="sidenav.toggle()"
-      >
+      <mat-list-item *ngFor="let item of sidebarItems" [routerLink]="item.url" (click)="sidenav.toggle()">
         <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
         {{ item.label }}
       </mat-list-item>
+      <mat-list-item (click)="editUser()">
+        <mat-icon matListItemIcon>person</mat-icon>
+        Editar Usuario
+      </mat-list-item>
+      <mat-list-item (click)="onLogout()">
+        <mat-icon matListItemIcon>exit_to_app</mat-icon>
+        Cerrar Sesion
+      </mat-list-item>
     </mat-nav-list>
-
   </mat-sidenav>
-
 
   <mat-toolbar color="primary">
     <button mat-icon-button (click)="sidenav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-
     <span class="spacer"></span>
-    <span>usuario a mostrar</span>
-
-    <button mat-button (click)="onLogout()">
-      Logout
-    </button>
-
   </mat-toolbar>
 
-
   <div class="container p-8">
-
     <router-outlet></router-outlet>
-
   </div>
 
 </mat-sidenav-container>
