--- a/src/app/posts/pages/list-page/list-page.component.html
+++ b/src/app/posts/pages/list-page/list-page.component.html
@@ -1,8 +1,27 @@
+<section>
+  <div class="flex flex-column p-2">
+
+    <h2>Buscador de Publicaciones</h2>
+
+    <mat-form-field>
+      <mat-label>Buscar publicacion</mat-label>
+      <input
+        type="text"
+        matInput
+        [formControl]="searchInput"
+        (input)="searchPosts()"
+      />
+    </mat-form-field>
+  </div>
+</section>
 <h1>Publicaciones: {{apiResp?.total}}</h1>
 <mat-divider></mat-divider>
 <div class="grid bm-8 pt-2">
   <div *ngFor="let post of apiResp?.posts"
-    class="col-12 sm:col-4 md:col-3 xl:col-2">
-    <post-card [post]="post"></post-card>
+    class="col-12 sm:col-6 md:col-4 xl:col-3">
+    <post-card [post]="post"
+               [edit]="isOwner(post.userId._id)"
+               (miEmitter)="delEvent(post._id)">
+    </post-card>
   </div>
 </div>
