--- a/src/app/posts/pages/new-post/new-post.component.html
+++ b/src/app/posts/pages/new-post/new-post.component.html
@@ -11,12 +11,7 @@
 
           <mat-form-field class="col-12">
             <mat-label>Contenido</mat-label>
-            <input matInput type="textarea" required formControlName="content" />
-          </mat-form-field>
-
-          <mat-form-field class="col-12">
-            <mat-label>Likes</mat-label>
-            <input matInput type="number" required formControlName="likes" />
+            <input matInput type="text" required formControlName="content" />
           </mat-form-field>
         </form>
         <div class="flex justify-content-between">
